news_servies history_news_fetch trader_opinion

--- a/env.example
+++ b/env.example
@@ -33,24 +33,13 @@ EMBEDDING_COLUMN=embedding_context
 # EMBEDDING_DEVICE=cuda
 
 # ============================================================================
-# Supabase 配置
+# ChromaDB RAG 配置
 # ============================================================================
 
-# Supabase 项目 URL
-# 格式：https://your-project-id.supabase.co
-SUPABASE_URL=
-
-# Supabase 服务密钥（Service Role Key）
-# 注意：这是敏感信息，不要提交到版本控制
-# 可以在 Supabase 项目设置 -> API -> service_role key 中找到
-SUPABASE_SERVICE_KEY=
-
-# ============================================================================
-# 数据库表配置
-# ============================================================================
-
-# 清理数据表名
-CLEAN_DATA_TABLE_NAME=clean_data
+# ChromaDB RAG API 服务地址
+# 默认: http://127.0.0.1:8765
+# 如果 RAG API 服务运行在其他地址，请修改此值
+CHROMADB_RAG_API_URL=http://127.0.0.1:8765
 
 
 
